Fix linebreaks in restaurant addresses

--- a/front-end/sass/index-styles.scss
+++ b/front-end/sass/index-styles.scss
@@ -3,7 +3,7 @@
 #map {
     height: 400px;
     width: 100%;
-    background-color: #ccc;
+    background-color: #444;
     overflow: hidden;
   }
 
